--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -16,7 +16,7 @@
   <td>
     <%= link_to "delete", feed_item, :method => :delete,
                                      :confirm => "You sure?",
-                                     :title => feed_item.content %>
+                                     :title => "AcademicX" %>
   </td>
   <% end %>
 </tr>
