--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,4 +1,4 @@
-<% unless @feed_items.empty? %>
+<% unless @feed_items == nil %>
   <table class="academics" summary="User academics">
     <%= render :partial => 'shared/feed_item', :collection => @feed_items %>
   </table>
