--- a/app/views/academics/_academic.html.erb
+++ b/app/views/academics/_academic.html.erb
@@ -13,7 +13,7 @@
   <td>
     <%= link_to "delete", academic, :method => :delete,
                                      :confirm => "You sure?",
-                                     :title => academic.content %>
+                                     :title => "AcademicX" %>
   </td>
   <% end %>
 </tr>
